--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "10.0.0-rc.0",
     "@trpc/react-query": "10.0.0-rc.0",
     "@trpc/server": "10.0.0-rc.0",
+    "framer-motion": "^7.6.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,6 +36,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.5.0",
+    "react-icons": "^4.6.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4"
   },
